@@ -14,6 +14,8 @@
 
   - Adopted a triple-collumn layout for the footer
 
+  - New components : social media links
+
 ## BlueSky 2.x
 
 ### BlueSky 2.1
